# grpc-service-mesh-sample

./: .gitignore  README.md
grpc-client/: Dockerfile  pyproject.toml
grpc-client/grpc_client/: __main__.py
grpc-server/: Dockerfile
grpc-server/grpc_server/sample_model/: config.pbtxt
k8s/base/: kustomization.yaml
k8s/base/grpc_client/: deployment.yaml  service.yaml
k8s/base/grpc_server/: deployment.yaml  service.yaml
k8s/overlays/prd/: kustomization.yaml
k8s/overlays/prd/grpc_client/: deployment-patch.yaml
k8s/overlays/prd/grpc_server/: deployment-patch.yaml
terraform/: README.md
terraform/environments/sample/: main.tf  variables.tf
terraform/modules/service_account/: resource.tf  variables.tf
